# Beehive

./: .gitignore  CMakeLists.txt  README.md  UML_Beehive.drawio  main.cpp
include/Core/: CApplication.hpp  CSimulation.hpp
include/Utils/: CEnums.hpp
include/World/: CBeehive.hpp  CEntity.hpp  CFlower.hpp  CIntruder.hpp
include/World/CBees/: CBee.hpp  CQueenBee.hpp  CWarriorBee.hpp  CWorkerBee.hpp
src/Core/: CApplication.cpp  CSimulation.cpp
src/World/: CBeehive.cpp
